--- a/AI-powered-Resume-Analyzer/src/index.html
+++ b/AI-powered-Resume-Analyzer/src/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AIPoweredResumeAnalyzer</title>
+  <title>NextHire</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/Images/logo.png">
 </head>
-<body>
-  <h1 class="text-red-600">Heyyy</h1>
+
+<body class="bg-[#e6eff5]">
   <app-root></app-root>
 </body>
 </html>
